--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
     "antd": "^5.16.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-popper": "^2.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "yarn": "^1.22.22",
     "zustand": "^4.5.2"
   },
