--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
+    "@headlessui/react": "^2.0.3",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
