--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "antd": "^5.16.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18next": "^23.11.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.1",
     "react-popper": "^2.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
