--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.0.3",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.36.0",
+    "@tanstack/react-query-devtools": "^5.36.0",
     "add": "^2.0.6",
     "antd": "^5.16.5",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +22,7 @@
     "i18next": "^23.11.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.1",
