--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@headlessui/react": "^2.0.3",
+    "@hookform/resolvers": "^3.4.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
@@ -25,12 +27,14 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
     "react-popper": "^2.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^6.1.1",
     "yarn": "^1.22.22",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
