--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.4.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.0",
@@ -26,13 +27,16 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-animate-height": "^3.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^6.1.1",
+    "vaul": "^0.9.1",
     "yarn": "^1.22.22",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
