--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-i18next": "^14.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
+    "react-quill": "^2.0.0",
+    "sweetalert2": "^11.11.0",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^6.1.1",
