--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.4.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
+    "@tanstack/react-table": "^8.17.3",
     "add": "^2.0.6",
     "antd": "^5.16.5",
     "class-variance-authority": "^0.7.0",
