--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -38,6 +39,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
+    "reactflow": "^11.11.3",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
