--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "react": "^18",
     "react-animate-height": "^3.2.3",
     "react-dom": "^18",
