--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+   
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
@@ -62,6 +63,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "husky": "^9.0.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
