--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
     "@tanstack/react-table": "^8.17.3",
+    "@xyflow/react": "^12.0.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -44,7 +45,6 @@
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.0.19",
-    "reactflow": "^11.11.3",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
