--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.4.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-devtools": "^5.36.0",
@@ -45,6 +47,7 @@
     "react-popper": "^2.3.0",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.0.19",
+    "react-select": "^5.8.0",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
