--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "universal-cookie": "^6.1.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
