--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-animate-height": "^3.2.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^14.1.1",
     "react-perfect-scrollbar": "^1.5.8",
@@ -71,7 +71,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^14.2.15",
     "husky": "^9.0.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
