feat: Add Organizations page and layout components; update package dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -55,6 +56,8 @@
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.0.19",
     "react-select": "^5.8.0",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^1.6.1",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^2.3.0",
