--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "framer-motion": "^11.11.1",
     "i18next": "^23.11.4",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.451.0",
     "nanoid": "^5.0.7",
