--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "elkjs": "^0.9.3",
     "framer-motion": "^11.11.1",
     "i18next": "^23.11.4",
