--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "emoji-mart": "^5.5.2",
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^5.0.2",
