--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
-    "emoji-mart": "^5.5.2",
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^5.0.2",
@@ -43,6 +42,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "elkjs": "^0.9.3",
+    "emoji-mart": "^5.5.2",
     "framer-motion": "^11.11.1",
     "i18next": "^23.11.4",
     "js-cookie": "^3.0.5",
@@ -53,6 +53,7 @@
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
+    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-animate-height": "^3.2.3",
     "react-dom": "^18.3.1",
